--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -2,13 +2,14 @@
   <require from="materialize-css/bin/materialize.css"></require>
   <section>
     <h2>${heading}</h2>
-    <button md-button="large: true;">Play</button>
-    <button md-button="large: true;">Pause</button>
-    <button md-button="large: true;">Stop</button>
+    <button md-button="large: true;" click.delegate="play($event)">Play</button>
+    <button md-button="large: true;" click.delegate="pause($event)">Pause</button>
+    <button md-button="large: true;" click.delegate="stop($event)">Stop</button>
+    <button md-button="large: true;" click.delegate="reset($event)">Empty Queue</button>
     <br><br>
     <div class="row au-stagger">
       <div class="card-container" repeat.for="[id, track] of queuedTracks">
-        <div class="list-group-item" click.delegate="play($event, track)">
+        <div class="list-group-item" click.delegate="playTrack($event, track)">
           <div>
             <h4 class="list-group-item-heading">${track.title}</h4>
               <p class="list-group-item-text">Album ${track.album}</p>
