--- a/beetsplug/web/src/speakers.html
+++ b/beetsplug/web/src/speakers.html
@@ -4,7 +4,7 @@
         <h2>${heading}</h2>
         <ul>
             <li class="speaker" repeat.for="speaker of speakers">
-                <md-checkbox md-checked.bind="speaker.selected" md-checked.delegate="speakerSelected($event, speaker)">${speaker.name}</md-checkbox>
+                <md-checkbox md-checked.bind="speaker.selected" change.delegate="speakerSelected($event, speaker)">${speaker.name}</md-checkbox>
 
                 <md-range class="volume_control" md-value.bind="speaker.volume" md-min="0" 
                         change.delegate="volumeChanged($event, speaker)" md-max="100" md-step="1"></md-range>
