--- a/beetsplug/web/src/tracks.html
+++ b/beetsplug/web/src/tracks.html
@@ -24,7 +24,9 @@
           </div>
     </div>
 
-    <md-pagination md-on-page-changed.delegate="onPageChanged($event)" md-pages.bind="numberOfPages" 
+    <md-pagination md-show-first-last.two-way="showFirstLastPages"
+                   md-visible-page-links.two-way="visiblePageLinks"
+                   md-on-page-changed.delegate="onPageChanged($event)" md-pages.bind="numberOfPages" 
         md-active-page.bind="activePage" md-visible-page-links="20"></md-pagination>
    
   </section>
