Pass all speakers when setting devices

--- a/beetsplug/web/src/tracks.html
+++ b/beetsplug/web/src/tracks.html
@@ -11,7 +11,7 @@
 
     <div class="row au-stagger" repeat.for="track of pageTracks">
           <div class="card-container">
-            <div class="list-group-item" click.delegate="playTrack($event, track)">
+            <div class="list-group-item">
               <div>
                 <h4 class="list-group-item-heading">${track.title}</h4>
                   <p class="list-group-item-text">Album ${track.album}</p>
