--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -6,6 +6,7 @@
     <button md-button="large: true;" click.delegate="pause($event)">Pause</button>
     <button md-button="large: true;" click.delegate="stop($event)">Stop</button>
     <button md-button="large: true;" click.delegate="reset($event)">Empty Queue</button>
+    <button md-button="large: true;" click.delegate="save($event)">Save Queue</button>
     <br><br>
     <div class="row au-stagger">
       <div class="card-container" repeat.for="[id, track] of queuedTracks">
