--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -18,7 +18,7 @@
     <button md-button="large: true;" click.delegate="savePlaylist($event)">Save Playlist</button>
     <br><br>
     <div class="row au-stagger">
-      <div class="card-container" repeat.for="[id, track] of queuedTracks">
+      <div class="card-container" repeat.for="track of queuedTracks">
         <div class="list-group-item" click.delegate="playTrack($event, track)">
           <div>
             <h4 class="list-group-item-heading">${track.title}</h4>
