--- a/beetsplug/web/index.html
+++ b/beetsplug/web/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title><%- webpackConfig.metadata.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <base href="<%- webpackConfig.metadata.baseUrl %>">
     <!-- imported CSS are concatenated and added automatically -->
   </head>
+
+  <require from="materialize-css/materialize.css"></require>
+
   <body>
-    <div class="splash">
-      <div class="message"><%- webpackConfig.metadata.title %></div>
-      <i class="fa fa-spinner fa-spin"></i>
+    <div aurelia-app="main">
+      <div class="splash">
+        <!-- <div class="message"><%- webpackConfig.metadata.title %></div> -->
+        <i class="fa fa-spinner fa-spin"></i>
+      </div>
+      <% if (webpackConfig.metadata.ENV === 'development') { %>
+      <!-- Webpack Dev Server reload -->
+      <script src="/webpack-dev-server.js"></script>
+      <% } %>
     </div>
-    <% if (webpackConfig.metadata.ENV === 'development') { %>
-    <!-- Webpack Dev Server reload -->
-    <script src="/webpack-dev-server.js"></script>
-    <% } %>
   </body>
 </html>
