--- a/beetsplug/web/src/app.html
+++ b/beetsplug/web/src/app.html
@@ -1,10 +1,15 @@
 <template>
-  <require from="bootstrap/dist/css/bootstrap.css"></require>
-  <require from="./nav-bar.html"></require>
+
+  <require from='./nav-bar'></require>
 
   <nav-bar router.bind="router"></nav-bar>
 
-  <div class="page-host">
+  <div>
     <router-view></router-view>
   </div>
+
 </template>
+
+
+
+
