--- a/beetsplug/web/src/nav-bar.html
+++ b/beetsplug/web/src/nav-bar.html
@@ -1,30 +1,33 @@
 <template bindable="router">
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse">
-        <span class="sr-only">Toggle Navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">
-        <i class="fa fa-home"></i>
-        <span>${router.title}</span>
-      </a>
-    </div>
+  <require from="materialize-css/materialize.css"></require>
+  
+    <md-navbar md-fixed="true">
+      <a md-sidenav-collapse="ref.bind: sideNavLeft;" md-button md-waves>Toggle SideNav</a>
+        <a md-sidenav-collapse="ref.bind: sideNav;" class="left hide-on-large-only" style="cursor: pointer; padding: 0 10px;"><i class="material-icons">menu</i></a>
+        <ul class="hide-on-med-and-down left">
+          <li md-waves repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
+              <a href.bind="row.href">${row.title}</a>
+          </li>
+          <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+        </ul>
 
-    <div class="collapse navbar-collapse" id="skeleton-navigation-navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
-          <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title}</a>
-        </li>
-      </ul>
+        <md-sidenav view-model.ref="sideNav">
+          <ul>
+            <li md-waves repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
+                <a href.bind="row.href">${row.title}</a>
+            </li>
+          </ul>
+        </md-sidenav>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li class="loader" if.bind="router.isNavigating">
-          <i class="fa fa-spinner fa-spin fa-2x"></i>
-        </li>
-      </ul>
-    </div>
-  </nav>
+        <md-sidenav view-model.ref="sideNavLeft">
+    <ul>
+      <li md-waves><a>About</a></li>
+      <li md-waves><a>Installation</a></li>
+      <li md-waves><a>Project Status</a></li>
+      <li md-waves><a>Help/Docs</a></li>
+    </ul>
+  </md-sidenav>
+
+
+    </md-navbar>
 </template>
