--- a/beetsplug/web/src/app.html
+++ b/beetsplug/web/src/app.html
@@ -1,6 +1,6 @@
 <template>
 
-  <require from='./nav-bar'></require>
+  <require from='./nav-bar.html'></require>
 
   <nav-bar router.bind="router"></nav-bar>
 
