--- a/beetsplug/web/src/albums.html
+++ b/beetsplug/web/src/albums.html
@@ -1,35 +1,48 @@
 <template>
-  
+
   <require from="materialize-css/bin/materialize.css"></require>
-  <require from="./tracks.css"></require>
 
   <section>
-    <h2>${heading}</h2>
+    <div class="container">
+      <div class="section">
 
-    <md-input md-label="search tracks" md-value.bind="searchText" change.delegate="onSearchText($event)"></md-input>
-    <br><br>
+        <div class="col s12 m4">
 
-    <div class="row au-stagger" repeat.for="track of pageTracks">
-          <div class="card-container">
-            <div class="list-group-item">
-              <div>
-                <h4 class="list-group-item-heading">${track.title}</h4>
-                  <p class="list-group-item-text">Album ${track.album}</p>
-                  <p class="list-group-item-text">Artist ${track.artist}</p>
-              </div>
-              <a href click.delegate="gotoTrackEdit($event, track)">Edit Metadata</a>
-              <br>
-              <a href click.delegate="addToQueue($event, track)">Add to queue</a>
-              <br>
-              <a href click.delegate="playTrack($event, track)">Play</a>
-            </div>
-          </div>
+              <md-input md-label="search tracks" md-value.bind="searchText" change.delegate="onSearchText($event)"></md-input>
+              <br><br>
+
+              <md-collection view-model.ref="list">
+                <md-collection-item repeat.for="track of pageTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
+                  <span class="accent-text title">${track.title}</span>
+                  <p>Album ${track.album}</p>
+                  <p>Artist ${track.artist}</p>
+                  <div class="secondary-content">
+                    <a href click.delegate="gotoTrackEdit($event, track)"><i class="material-icons small">mode_edit</i></a>
+                    <a href click.delegate="addToQueue($event, track)"><i class="material-icons small">playlist_add</i></a>
+                    <a href click.delegate="playTrack($event, track)"><i class="material-icons small">play_arrow</i></a>
+                  </div>
+                </md-collection-item>
+              </md-collection>
+
+
+           <!--
+                      <a href click.delegate="gotoTrackEdit($event, track)">Edit Metadata</a>
+                      <br>
+                      <a href click.delegate="addToQueue($event, track)">Add to queue</a>
+                      <br>
+                      <a href click.delegate="playTrack($event, track)">Play</a>
+                   -->
+
+              <md-pagination md-show-first-last.two-way="showFirstLastPages"
+                             md-visible-page-links.two-way="visiblePageLinks"
+                             md-on-page-changed.delegate="onPageChanged($event)"
+                             md-pages.bind="numberOfPages"
+                             md-active-page.bind="activePage"
+                             md-visible-page-links="20"></md-pagination>
+
+        </div>
+      </div>
     </div>
+</section>
 
-    <md-pagination md-show-first-last.two-way="showFirstLastPages"
-                   md-visible-page-links.two-way="visiblePageLinks"
-                   md-on-page-changed.delegate="onPageChanged($event)" md-pages.bind="numberOfPages" 
-        md-active-page.bind="activePage" md-visible-page-links="20"></md-pagination>
-   
-  </section>
 </template>
