--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -5,8 +5,6 @@
         <div class="section">
 
           <div class="col s12 m4">
-
-            <h2>${heading}</h2>
    
             <div class="button-row">
               <button md-waves class="primary" md-button="large: true;" click.delegate="play($event)">Play</button>
@@ -18,18 +16,16 @@
             </div>
             <br><br>
 
-            <div class="row" repeat.for="track of queuedTracks">
-                <div class="col s12 m12">
-                  <div class="card blue-grey lighten-1" click.delegate="playTrack($event, track)">
-                    <div class="card-content white-text">
-                      <div class="card-title">${track.title}</div>
-                      <div>Album ${track.album}</div>
-                      <div>Artist ${track.artist}</div>
-                    </div>
-                  </div>
+            <md-collection view-model.ref="list">
+              <md-collection-item repeat.for="track of queuedTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
+                <span class="accent-text title">${track.title}</span>
+                <p>Album ${track.album}</p>
+                <p>Artist ${track.artist}</p>
+                <div class="secondary-content">
+                  <i class="material-icons medium">play_arrow</i>
                 </div>
-              </div>
-    
+              </md-collection-item>
+            </md-collection>
              
           </div>
         </div>
@@ -37,97 +33,3 @@
 
   </section>
 </template>
-
-
-
-
-
-
-
-
-
-
-
-<!--
-
-
-<template>
-  <require from="./selection.css"></require>
-  <div class="row">
-    <div class="col s12">
-      <div>
-        <md-collection view-model.ref="list">
-          <md-collection-item repeat.for="actor of actors" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
-            <md-collection-selector
-              view-model.ref="selector"
-              item.bind="actor"
-              md-on-selection-changed.delegate="onSelectionChanged($event)"
-              md-disabled="${$index === 2}"
-            >
-              <img if.bind="$index !== 2" src="images/collections-sample-1.jpg" alt="" class="circle md-collection-selector__hover">
-            </md-collection-selector>
-            <span class="accent-text title">${actor.name}</span>
-            <p>${actor.description}</p>
-            <div class="secondary-content">
-              <i class="material-icons">send</i>
-            </div>
-          </md-collection-item>
-        </md-collection>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col s12">
-      <div>
-        <button md-button click.delegate="list.selectAll()">select all</button>
-        <button md-button click.delegate="list.clearSelection()">clear</button>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col s12">
-      <md-card md-title="Console log">
-        <logger class="z-depth-1" view-model.ref="logger"></logger>
-      </md-card>
-    </div>
-  </div>
-</template>
-
-
-
-  <ul class="collection">
-    <li class="collection-item avatar">
-      <img src="images/yuna.jpg" alt="" class="circle">
-      <span class="title">Title</span>
-      <p>First Line <br>
-         Second Line
-      </p>
-      <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-    </li>
-    <li class="collection-item avatar">
-      <i class="material-icons circle">folder</i>
-      <span class="title">Title</span>
-      <p>First Line <br>
-         Second Line
-      </p>
-      <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-    </li>
-    <li class="collection-item avatar">
-      <i class="material-icons circle green">insert_chart</i>
-      <span class="title">Title</span>
-      <p>First Line <br>
-         Second Line
-      </p>
-      <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-    </li>
-    <li class="collection-item avatar">
-      <i class="material-icons circle red">play_arrow</i>
-      <span class="title">Title</span>
-      <p>First Line <br>
-         Second Line
-      </p>
-      <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
-    </li>
-  </ul>
-
-  -->
