--- a/beetsplug/web/src/tracks.html
+++ b/beetsplug/web/src/tracks.html
@@ -8,29 +8,30 @@
 
         <div class="col s12 m4">
 
-          <h2>${heading}</h2>
-
               <md-input md-label="search tracks" md-value.bind="searchText" change.delegate="onSearchText($event)"></md-input>
               <br><br>
 
-              <div class="row" repeat.for="track of pageTracks">
-                <div class="col s12 m12">
-                  <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                      <div class="card-title">${track.title}</div>
-                      <div>Album ${track.album}</div>
-                      <div>Artist ${track.artist}</div>
-                    </div>
-                    <div class="card-action">
+              <md-collection view-model.ref="list">
+                <md-collection-item repeat.for="track of pageTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
+                  <span class="accent-text title">${track.title}</span>
+                  <p>Album ${track.album}</p>
+                  <p>Artist ${track.artist}</p>
+                  <div class="secondary-content">
+                    <a href click.delegate="gotoTrackEdit($event, track)"><i class="material-icons small">mode_edit</i></a>
+                    <a href click.delegate="addToQueue($event, track)"><i class="material-icons small">playlist_add</i></a>
+                    <a href click.delegate="playTrack($event, track)"><i class="material-icons small">play_arrow</i></a>
+                  </div>
+                </md-collection-item>
+              </md-collection>
+
+
+           <!--
                       <a href click.delegate="gotoTrackEdit($event, track)">Edit Metadata</a>
                       <br>
                       <a href click.delegate="addToQueue($event, track)">Add to queue</a>
                       <br>
                       <a href click.delegate="playTrack($event, track)">Play</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                   -->
 
               <md-pagination md-show-first-last.two-way="showFirstLastPages"
                              md-visible-page-links.two-way="visiblePageLinks"
