--- a/beetsplug/web/src/albums.html
+++ b/beetsplug/web/src/albums.html
@@ -8,11 +8,11 @@
 
         <div class="col s12 m4">
 
-              <md-input md-label="search tracks" md-value.bind="searchText" change.delegate="onSearchText($event)"></md-input>
+              <md-input md-label="search albums" md-value.bind="searchText" change.delegate="onSearchText($event)"></md-input>
               <br><br>
 
               <md-collection view-model.ref="list">
-                <md-collection-item repeat.for="album of pageTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
+                <md-collection-item repeat.for="album of pageAlbums" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
                   
                   <div class="row">
                     <div class="col s1">
@@ -24,9 +24,7 @@
                       <span class="accent-text title">${album.album}</span>
                       <p>Artist ${album.albumartist}</p>
                       <div class="secondary-content">
-                        <a href click.delegate="gotoTrackEdit($event, album)"><i class="material-icons small">mode_edit</i></a>
                         <a href click.delegate="addToQueue($event, album)"><i class="material-icons small">playlist_add</i></a>
-                        <a href click.delegate="playTrack($event, album)"><i class="material-icons small">play_arrow</i></a>
                       </div>
                     </div>
                   </div>
