Addeded restful method to get album items

--- a/beetsplug/web/src/tracks.html
+++ b/beetsplug/web/src/tracks.html
@@ -16,7 +16,7 @@
                   
                   <div class="row">
                     <div class="col s1">
-                    <img width="72" height="72" src="http://192.168.1.6:5000/album_artwork/${track.artpath}" />
+                    <img width="72" height="72" src="http://192.168.1.6:5000/album_artwork/${track.album_id}" />
                     </div>
 
                     <div class="col s11">
