--- a/beetsplug/web/src/albums.html
+++ b/beetsplug/web/src/albums.html
@@ -24,7 +24,7 @@
                       <span class="accent-text title">${album.album}</span>
                       <p>Artist ${album.albumartist}</p>
                       <div class="secondary-content">
-                        <a href click.delegate="addToQueue($event, album)"><i class="material-icons small">playlist_add</i></a>
+                        <a href click.delegate="addToQueue($event, album.id)"><i class="material-icons small">playlist_add</i></a>
                       </div>
                     </div>
                   </div>
