--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -17,10 +17,18 @@
             <br><br>
 
             <md-collection view-model.ref="list">
-              <md-collection-item repeat.for="track of queuedTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
-                <span class="accent-text title">${track.title}</span>
-                <p>Album ${track.album}</p>
-                <p>Artist ${track.artist}</p>
+              <md-collection-item repeat.for="track of queuedTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">           
+                <div class="row">
+                  <div class="col s1">
+                    <img width="72" height="72" src="http://192.168.1.6:5000/album_artwork/${track.album_id}" />
+                  </div>
+
+                  <div class="col s11">
+                    <span class="accent-text title">${track.title}</span>
+                    <p>Album ${track.album}</p>
+                    <p>Artist ${track.artist}</p>
+                  </div>
+                </div>
               </md-collection-item>
             </md-collection>
              
