Use some icons for buttons

--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -7,10 +7,10 @@
           <div class="col s12 m4">
    
             <div class="button-row">
-              <button md-waves class="primary" md-button="large: true;" click.delegate="play($event)">Play</button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="pause($event)">Pause</button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="stop($event)">Stop</button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="reset($event)">Empty Queue</button>
+              <button md-waves class="primary" md-button="large: true;" click.delegate="play($event)"><i class="material-icons">play_arrow</i></button>
+              <button md-waves class="primary" md-button="large: true;" click.delegate="pause($event)"><i class="material-icons">pause</i></button>
+              <button md-waves class="primary" md-button="large: true;" click.delegate="stop($event)"><i class="material-icons">stop</i></button>
+              <button md-waves class="primary" md-button="large: true;" click.delegate="reset($event)"><i class="material-icons">clear_all</i></button>
               <button md-waves class="primary" md-button="large: true;" click.delegate="loadPlaylist($event)">Load Playlist</button>
               <button md-waves class="primary" md-button="large: true;" click.delegate="savePlaylist($event)">Save Playlist</button>
             </div>
