Messing with css

--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -37,13 +37,15 @@
               <i class="material-icons">menu</i>
             </a>
 
-            <div class="button-row" class="left hide-on-small-only">
-              <button md-waves class="primary" md-button="large: true;" click.delegate="play($event)"><i class="material-icons">play_arrow</i></button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="pause($event)"><i class="material-icons">pause</i></button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="stop($event)"><i class="material-icons">stop</i></button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="reset($event)"><i class="material-icons">clear_all</i></button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="loadPlaylist($event)">Load Playlist</button>
-              <button md-waves class="primary" md-button="large: true;" click.delegate="savePlaylist($event)">Save Playlist</button>
+            <div class="left hide-on-small-only">
+              <div class="button-row" class="left">
+                <button md-waves class="primary" md-button="large: true;" click.delegate="play($event)"><i class="material-icons">play_arrow</i></button>
+                <button md-waves class="primary" md-button="large: true;" click.delegate="pause($event)"><i class="material-icons">pause</i></button>
+                <button md-waves class="primary" md-button="large: true;" click.delegate="stop($event)"><i class="material-icons">stop</i></button>
+                <button md-waves class="primary" md-button="large: true;" click.delegate="reset($event)"><i class="material-icons">clear_all</i></button>
+                <button md-waves class="primary" md-button="large: true;" click.delegate="loadPlaylist($event)">Load Playlist</button>
+                <button md-waves class="primary" md-button="large: true;" click.delegate="savePlaylist($event)">Save Playlist</button>
+              </div>
             </div>
 
             <br><br>
