--- a/beetsplug/web/src/nav-bar.html
+++ b/beetsplug/web/src/nav-bar.html
@@ -8,7 +8,7 @@
               <a href.bind="row.href">${row.title}</a>
           </li>
         </ul>
-        <md-sidenav view-model.ref="sideNav">
+        <md-sidenav view-model.ref="sideNav" md-close-on-click="true">
           <ul>
             <li md-waves repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
                 <a href.bind="row.href">${row.title}</a>
