--- a/beetsplug/web/src/tracks.html
+++ b/beetsplug/web/src/tracks.html
@@ -34,21 +34,25 @@
                 </md-collection-item>
               </md-collection>
 
+              <div class="center-align hide-on-large-only">
+                              <md-pagination md-show-first-last.two-way="false"
+                                            md-on-page-changed.delegate="onPageChanged($event)"
+                                            md-pages.bind="numberOfPages"
+                                            md-visible-page-links="0"
+                                            md-active-page.bind="activePage"></md-pagination>
 
-           <!--
-                      <a href click.delegate="gotoTrackEdit($event, track)">Edit Metadata</a>
-                      <br>
-                      <a href click.delegate="addToQueue($event, track)">Add to queue</a>
-                      <br>
-                      <a href click.delegate="playTrack($event, track)">Play</a>
-                   -->
+              </div>
+
+              <div class="center-align hide-on-med-and-down">
 
                 <md-pagination md-show-first-last.two-way="showFirstLastPages"
                               md-visible-page-links.two-way="visiblePageLinks"
                               md-on-page-changed.delegate="onPageChanged($event)"
                               md-pages.bind="numberOfPages"
                               md-active-page.bind="activePage"
-                              md-visible-page-links="6"></md-pagination>
+                              md-visible-page-links="10"></md-pagination>
+
+              </div>
 
         </div>
       </div>
