--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -6,8 +6,8 @@
 
           <md-sidenav view-model.ref="sideNav" md-edge="right">
             <div class="center-btn">
-              <div class="button-row">
-              <button md-waves class="primary" md-button="large: true;" click.delegate="play($event)"><i class="material-icons">play_arrow</i></button>
+              <div class="button-row center-btn">
+              <button class="center-btn" md-waves class="primary" md-button="large: true;" click.delegate="play($event)"><i class="material-icons">play_arrow</i></button>
               </div>
 
               <div class="button-row">
