--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -23,11 +23,11 @@
               </div>
 
               <div class="button-row">
-              <button md-waves class="primary" md-button="large: true;" click.delegate="loadPlaylist($event)">Load Playlist</button>
+              <button md-waves class="primary" md-button="large: true;" click.delegate="loadPlaylist($event)"><i class="fa fa-upload" aria-hidden="true"></i></button>
               </div>
 
               <div class="button-row">
-              <button md-waves class="primary" md-button="large: true;" click.delegate="savePlaylist($event)">Save Playlist</button>
+              <button md-waves class="primary" md-button="large: true;" click.delegate="savePlaylist($event)"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
               </div>
             </div>
           </md-sidenav>
