--- a/beetsplug/web/src/tracks.html
+++ b/beetsplug/web/src/tracks.html
@@ -14,32 +14,26 @@
               <md-collection view-model.ref="list">
                 <md-collection-item repeat.for="track of pageTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
                   
-                  <div class="row">
-                    <div class="col s1">
-                    <img width="72" height="72" src="http://192.168.1.6:5000/album_artwork/${track.album_id}" />
-                    </div>
-
-                    <div class="col s11">
-                      <span class="accent-text title">${track.title}</span>
-                      <p>Album ${track.album}</p>
-                      <p>Artist ${track.artist}</p>
-                      <div class="secondary-content">
-                        <a href click.delegate="gotoTrackEdit($event, track)"><i class="material-icons small">mode_edit</i></a>
-                        <a href click.delegate="addToQueue($event, track)"><i class="material-icons small">playlist_add</i></a>
-                        <a href click.delegate="playTrack($event, track)"><i class="material-icons small">play_arrow</i></a>
-                      </div>
-                    </div>
+                  <img src="http://192.168.1.6:5000/album_artwork/${track.album_id}" alt="" class="square">
+                  <span class="title">${track.title}</span>
+                  <p class="description">Album: ${track.album} <br>
+                     Artist: ${track.artist}
+                  </p>
+                  <div class="secondary-content">
+                    <a href click.delegate="gotoTrackEdit($event, track)"><i class="material-icons small">mode_edit</i></a>
+                    <a href click.delegate="addToQueue($event, track)"><i class="material-icons small">playlist_add</i></a>
+                    <a href click.delegate="playTrack($event, track)"><i class="material-icons small">play_arrow</i></a>
                   </div>
                 
                 </md-collection-item>
               </md-collection>
 
               <div class="center-align hide-on-large-only">
-                              <md-pagination md-show-first-last.two-way="false"
-                                            md-on-page-changed.delegate="onPageChanged($event)"
-                                            md-pages.bind="numberOfPages"
-                                            md-visible-page-links="0"
-                                            md-active-page.bind="activePage"></md-pagination>
+                  <md-pagination md-show-first-last.two-way="false"
+                                md-on-page-changed.delegate="onPageChanged($event)"
+                                md-pages.bind="numberOfPages"
+                                md-visible-page-links="0"
+                                md-active-page.bind="activePage"></md-pagination>
 
               </div>
 
