--- a/beetsplug/web/src/tracks.html
+++ b/beetsplug/web/src/tracks.html
@@ -12,7 +12,7 @@
               <br><br>
 
               <md-collection view-model.ref="list">
-                <md-collection-item repeat.for="track of pageTracks" class="avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
+                <md-collection-item repeat.for="track of pageTracks" class="partyzone-collection-item avatar ${ selector.isSelected ? 'selected' : '' } ${ selector.mdDisabled ? 'disabled' : '' }">
                   
                   <img src="http://192.168.1.6:5000/album_artwork/${track.album_id}" alt="" class="square">
                   <span class="title">${track.title}</span>
@@ -20,38 +20,25 @@
                      Artist: ${track.artist}
                   </p>
 
-
-
-
-<div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 24px; top: 10px;">
-        <a md-button="floating: true; large: true;" md-tooltip="position: bottom; text: edit;" md-waves="color: light; circle: true;">
-          <i class="large material-icons">mode_edit</i>
-        </a>
-        <ul>
-          <li><a click.delegate="gotoTrackEdit($event, track)" md-button="floating: true;" md-tooltip="position: bottom; text: charts;" md-waves="color: light; circle: true;" class="red"><i class="material-icons small">mode_edit</i></a></li>
-          <li><a click.delegate="addToQueue($event, track)" md-button="floating: true;" md-tooltip="position: bottom; text: quote;" md-waves="color: light; circle: true;" class="yellow darken-1"><i class="material-icons small">playlist_add</i></a></li>
-          <li><a click.delegate="playTrack($event, track)" md-button="floating: true;" md-tooltip="position: bottom; text: publish;" md-waves="color: light; circle: true;" class="green"><i class="material-icons small">play_arrow</i></a></li>
-        </ul>
-      </div>
-
-
-
-
+                  <div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 24px; top: 10px;">
+                    <a md-button="floating: true; large: true;" md-tooltip="position: bottom; text: edit;" md-waves="color: light; circle: true;">
+                      <i class="large material-icons">mode_edit</i>
+                    </a>
+                    <ul>
+                      <li><a click.delegate="gotoTrackEdit($event, track)" md-button="floating: true;" md-tooltip="position: bottom; text: edit metadata;" md-waves="color: light; circle: true;" class="red"><i class="material-icons small">mode_edit</i></a></li>
+                      <li><a click.delegate="addToQueue($event, track)" md-button="floating: true;" md-tooltip="position: bottom; text: add to queue;" md-waves="color: light; circle: true;" class="yellow darken-1"><i class="material-icons small">playlist_add</i></a></li>
+                      <li><a click.delegate="playTrack($event, track)" md-button="floating: true;" md-tooltip="position: bottom; text: play;" md-waves="color: light; circle: true;" class="green"><i class="material-icons small">play_arrow</i></a></li>
+                    </ul>
+                  </div>
 
                   <div class="secondary-content">
 
+                  <!--
+                                <a href click.delegate="gotoTrackEdit($event, track)"><i class="material-icons small">mode_edit</i></a>
+                                <a href click.delegate="addToQueue($event, track)"><i class="material-icons small">playlist_add</i></a>
+                                <a href click.delegate="playTrack($event, track)"><i class="material-icons small">play_arrow</i></a>
 
-
-
-      <!--
-
-
-                    <a href click.delegate="gotoTrackEdit($event, track)"><i class="material-icons small">mode_edit</i></a>
-                    <a href click.delegate="addToQueue($event, track)"><i class="material-icons small">playlist_add</i></a>
-                    <a href click.delegate="playTrack($event, track)"><i class="material-icons small">play_arrow</i></a>
-
--->
-
+                  -->
 
                   </div>
                 
