--- a/beetsplug/web/src/queue.html
+++ b/beetsplug/web/src/queue.html
@@ -65,7 +65,7 @@
                   <button md-waves class="primary" md-button="large: true;" click.delegate="pause($event)"><i class="material-icons controller-button">pause</i></button>
                   <button md-waves class="primary" md-button="large: true;" click.delegate="stop($event)"><i class="material-icons controller-button">stop</i></button>
                   <button md-waves class="primary" md-button="large: true;" click.delegate="reset($event)"><i class="material-icons controller-button">clear_all</i></button>
-                  <button md-waves class="primary" md-button="large: true;" click.delegate="loadPlaylist($event)"><i class="fa fa-upload controller-button" aria-hidden="true"></i></button>
+                  <button md-waves class="primary" md-button="large: true;" click.delegate="loadPlaylist($event)"><i class="fa fa-download controller-button" aria-hidden="true"></i></button>
                   <button md-waves class="primary" md-button="large: true;" click.delegate="savePlaylist($event)"><i class="fa fa-floppy-o controller-button" aria-hidden="true"></i></button>
                 </div>
               </div>
