--- a/beetsplug/web/index.html
+++ b/beetsplug/web/index.html
@@ -2,23 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%- webpackConfig.metadata.title %></title>
+    <title>Shimmy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <base href="<%- webpackConfig.metadata.baseUrl %>">
-    <!-- imported CSS are concatenated and added automatically -->
+    <link href="./styles/styles.css" rel="stylesheet">
+    <require from="materialize-css/css/materialize.css"></require>
   </head>
 
-  <require from="materialize-css/materialize.css"></require>
-
   <body>
-    <div aurelia-app="main">
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
 
+    <div aurelia-app="main">
       <div class="splash">
-        <div class="message"><%- webpackConfig.metadata.title %></div>
 
         <div class="preloader-wrapper big active">
+           
           <div class="spinner-layer spinner-blue">
             <div class="circle-clipper left">
               <div class="circle"></div>
@@ -67,12 +67,10 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <% if (webpackConfig.metadata.ENV === 'development') { %>
-      <!-- Webpack Dev Server reload -->
-      <script src="/webpack-dev-server.js"></script>
-      <% } %>
+      </div>
+     
     </div>
+
   </body>
 </html>
